# machu-picchu-ticket-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  availability.json  docker-compose.yml  pyproject.toml  railway.toml  rules.json
.github/workflows/: ci.yml  monitor.yml
data/: route_catalog.json
src/machu_picchu_monitor/: __init__.py  app.py  cli.py  config.py  models.py  monitor.py  notifications.py  observability.py  providers.py  route_matching.py  rules.py  storage.py
tests/: test_monitor.py  test_notifications.py  test_provider.py  test_route_matching.py  test_rules.py  test_storage.py
web/: index.html
